--- a/_posts/2011-1-2-users.markdown
+++ b/_posts/2011-1-2-users.markdown
@@ -61,7 +61,7 @@ You can also create new users by POSTing parameters
     /users [POST]
 
 <pre class="terminal">
-$ curl -H "CAPTCHA_TOKEN: bd4586faf8a26a3bae9ef44b7049a14e" -H "CAPTCHA_ANSWER: 12" -d "firstname=FirstName&lastname=LastName&email=usertest2@example.com&gender=M&birthday[year]=1981&birthday[month]=10&birthday[day]=20&password=F@ncyP@ssw0rd" \
+$ curl -H "X-ALLPLAYERS-CAPTCHA-TOKEN: bd4586faf8a26a3bae9ef44b7049a14e" -H "X-ALLPLAYERS-CAPTCHA-SOLUTION: 12" -d "firstname=FirstName&lastname=LastName&email=usertest2@example.com&gender=M&birthday[year]=1981&birthday[month]=10&birthday[day]=20&password=F@ncyP@ssw0rd" \
   https://www.allplayers.com/api/v1/rest/users.json
 {
   "sizes": [
