Add anchor link info for jumping to specific docs.

--- a/_posts/2011-1-4-events.markdown
+++ b/_posts/2011-1-4-events.markdown
@@ -11,6 +11,8 @@ API for accessing and modifying events.
 
 You can get the group information by listing all groups or by specific search terms
 
+<a id="/events/{uuid}"></a>
+
     /events/{uuid} [GET]
 
 <pre class="terminal">
