--- a/_posts/2011-1-2-users.markdown
+++ b/_posts/2011-1-2-users.markdown
@@ -11,6 +11,8 @@ API for accessing and modifying users.
 
 You can get the group information by listing all groups or by specific search terms
 
+<a id="/users/{uuid}"></a>
+
     /users/{uuid} [GET]
 
 <pre class="terminal">
