--- a/_posts/2011-1-3-groups.markdown
+++ b/_posts/2011-1-3-groups.markdown
@@ -50,6 +50,8 @@ $ curl https://www.allplayers.com/api/v1/rest/groups.json?search="Badminton+Devs
 ]
 </pre>
 
+<a id="/groups/{uuid}"></a>
+
     /groups/{uuid} [GET]
 
 <pre class="terminal">
