Update cURL notes (TBD: formalize cURL howto...)

--- a/_posts/2011-9-9-notes.markdown
+++ b/_posts/2011-9-9-notes.markdown
@@ -12,4 +12,11 @@ published: false
 *  [cURL PHP Snippets and Example](https://gist.github.com/10c96e8621540bbc9ec4)
    *  Note:
       *  When passing array parameters in a `POST` ensure to collapse the array items using [`http_build_query`](http://php.net/manual/en/function.http-build-query.php)
+*  cURL
+   *  http://curl.haxx.se/docs/manpage.html
+   *  http://curl.haxx.se/docs/httpscripting.html
+   *  Other Resources
+      *  http://drupal.org/node/305799
+      *  http://stackoverflow.com/questions/8427357/how-to-test-json-web-api-via-curl
+      *  http://code.google.com/apis/gdata/articles/using_cURL.html
 
