user gender doc update

--- a/_posts/2011-1-2-users.markdown
+++ b/_posts/2011-1-2-users.markdown
@@ -51,7 +51,7 @@ Required fields
 *  `firstname` User first name
 *  `lastname` User last name
 *  `email` User email address
-*  `gender` User gender
+*  `gender` User gender (M or F)
 *  `birthday` User birth date (YYYY-MM-DD)
 *  `password` User password
 
