[#27935919] adding events update docs

--- a/_posts/2011-1-4-events.markdown
+++ b/_posts/2011-1-4-events.markdown
@@ -96,7 +96,7 @@ Let's take a look at how to create an event
 
 \* Fields specified with an asterisk are required.  
 
-    /events [POST]
+    /events [POST / PUT]
 
 <pre class="terminal">
 curl -b cjar http://www.allplayers.local:8080/api/v1/rest/events.json -d"curl -b cjar http://www.allplayers.local:8080/api/v1/rest/events.json -d"groups[0]=aea342ac-69ef-11e1-b865-300db1507b7a&title=TestEvent&description=test1&category=game&competitors[c9690224-eead-11e0-abff-080027706aa2]label]=BlueJays&competitors[b0f67f02-6179-11e1-9932-b37b4e17875f][label]=RedJays&resources[0]=b19g47se-b0f67f02-6179-11e1-9932-b37b4e17875f&date_time[start]=2012-09-15T11%3A00%3A00&date_time[end]=2012-09-15T12%3A00%3A00&date_time[repeat][interval]=1&date_time[repeat][freq]=daily&date_time[repeat][until]=2012-10-15&date_time[repeat][exdate][]=2012-09-17&date_time[repeat][rdate][]=2012-10-17&date_time[repeat][bymonth][9]=9&date_time[repeat][bymonth][10]=10&date_time[repeat][bymonthday][12]=12&date_time[repeat][bymonthday][15]=15&date_time[repeat][bymonthday][17]=17&date_time[repeat][byday][SU]=SU&date_time[repeat][byday][MO]=MO"
@@ -165,6 +165,15 @@ curl -b cjar http://www.allplayers.local:8080/api/v1/rest/events.json -d"curl -b
   ]
 }
 </pre>
+Please examine the various [field information](events.html#field-info) for further description of the data returned.  
+
+The parameters for updating events are very similar, with the caveat that none of them are longer required.  
+The PUT request to event works with only the data you pass in, and the rest is left alone.  There are however a few caveats to keep in mind:
+
+*  If you are changing an event category that has competitors (game, scrimmage), to one that doesn't, keep in mind that since the title is automatically generated, you will need to pass that in in order to change it.  The competitors will automatically be removed.  
+
+*  The datetime parameter is rebuilt as a whole.  So for example if you just want to modify the until key in the date_time parameter, you will have to pass the whole thing in.
+
 
 <a id="field-info"></a>
 <a id="field-info-groups"></a>
